--- a/style1.css
+++ b/style1.css
@@ -24,7 +24,7 @@
 }
 
 .wrapper {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     color: var(--colorLight2);
     background-color: #7a7adb;
@@ -36,14 +36,14 @@ h1 {
     font-family: poppins;
     box-sizing: border-box;
     font-size: 4rem;
-    padding-top: 5px;
-    text-shadow: -1px 0 var(--colorDark1), 0 1px var(--colorDark1), 1px 0 var(--colorDark1), 0 -1px var(--colorDark1);
+    padding-top: 20px;
+    text-shadow: -1px 0 var(--colorDark1), 0 12px var(--colorDark1), 1px 0 var(--colorDark1), 0 -1px var(--colorDark1);
 }
 
 .tab-container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     max-width: 650px;
     margin: 0 auto;
     margin-top: 1.7rem;
@@ -51,7 +51,7 @@ h1 {
 
 .tab {
     cursor: pointer;
-    font-size: 0.875rem;
+    font-size: 1rem;
     letter-spacing: 1.75px;
     padding: 6px 25px;
 }
@@ -61,7 +61,7 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-block: 2.5rem;
+    margin-top: 2.5rem;
 }
 
 .btn1 {
@@ -104,6 +104,7 @@ h1 {
 
 .grant-location-container {
     display: none;
+    margin-top: 2rem;
 }
 
 .tab.current-tab {
@@ -248,6 +249,7 @@ third-card {
     margin: 0 auto;
     gap: 0 1rem;
     margin-bottom: 2rem;
+    padding: 0 2rem;
 }
 
 .form-container {
@@ -289,81 +291,263 @@ third-card {
     border-radius: 50%;
 }
 
-/* Existing CSS code */
+.error-container {
+    display: none;
+}
 
-/* Add media queries for responsiveness */
-@media screen and (max-width: 768px) {
+.error-container.active {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0rem;
+    width: 25rem;
+    max-width: 600px;
+}
+
+.errorImage {
+    margin-bottom: 1rem;
+    width: 50%;
+}
+
+
+@media screen and (max-width: 600px) {
+    .wrapper {
+        min-height: 100vh;
+        width: 100%;
+        color: var(--colorLight2);
+        background-color: #7a7adb;
+        overflow-x: hidden;
+        background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);
+    }
+
+    h1{
+        font-size: 2.5rem;
+        padding-top: 10px;
+        text-shadow: -1px 0 var(--colorDark1), 0 8px var(--colorDark1), 1px 0 var(--colorDark1), 0 -1px var(--colorDark1);
+    }
+
+
+
     .tab-container {
-        flex-direction: column;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
         align-items: center;
+        max-width: 600px;
+        margin: 1rem auto;
+        margin-top: 1rem;
+        flex-wrap: wrap;
     }
 
     .tab {
-        margin-bottom: 10px;
+        cursor: pointer;
+        font-size: 0.875rem;
+        letter-spacing: 1.75px;
+        padding: 6px 25px;
     }
 
     .weather-container {
-        margin-block: 1.5rem;
-    }
-
-    .user-sub-container {
-        flex-direction: column;
-    }
-
-    .left-side {
-        margin-bottom: 1.5rem;
-    }
-
-    .right-side {
-        text-align: center;
-    }
-
-    .weatherIcon {
-        width: 8rem;
-    }
-
-    .temp {
-        font-size: 5rem;
-    }
-
-    .two-cards,
-    third-card {
-        flex-direction: column;
+        display: flex;
+        justify-content: center;
         align-items: center;
-    }
-}
-
-/* Additional media queries for smaller screens if needed */
-@media screen and (max-width: 480px) {
-    h1 {
-        font-size: 3rem;
-    }
-
-    .tab {
-        padding: 6px 15px;
+        flex-direction: column;
+        margin: 2rem auto;
     }
 
     .btn1 {
-        font-size: 0.75rem;
-        padding: 8px 20px;
+        all: unset;
+        font-size: 0.85rem;
+        text-transform: uppercase;
+        border-radius: 5px;
+        border: none;
+        background-color: var(--colorDark2);
+        cursor: pointer;
+        padding: 10px 30px;
+        margin-bottom: 20px;
     }
 
-    .sub-container img {
-        margin-bottom: 1rem;
+    .loading-container{
+        margin-top: 5rem;
     }
 
-    .sub-container p:first-of-type {
-        font-size: 1.5rem;
+    .loading-container p:first-of-type{
+        font-size: 1.2rem;
     }
 
-    .sub-container>p:nth-of-type(2) {
-        font-size: 0.75rem;
+    .grant-location-container{
+        margin: 5rem auto;
+    }
+
+    .user-info-container{
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: space-between;
         margin-top: 0.5rem;
-        margin-bottom: 1.25rem;
     }
 
-    .name p:first-of-type {
-        font-size: 1.25rem;
+    .left-side{
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .weatherIcon{
+        width: 6.5rem;
+        align-self: start;
+        margin-top: 0rem;
+    }
+
+    .name{
+        margin: 1 auto;
+    }
+
+    .name p:first-of-type{
+        font-size: 1.3rem;
+        margin-right: 1rem;
+        gap: 0 1rem;
+    }
+
+    .name img{
+        width: 25px;
+        height: 25px;
+    }
+
+    .two-cards,.third-card{
+        justify-content: space-around;
+        width: 100%;
+        margin: 0rem;
+    }
+    .two-cards{
+        gap: 1rem 0.5rem;
+    }
+
+    .parameter img{
+        width: 80px;
+        margin-right: 0.5rem;
+    }
+
+    .iconData p:first-of-type{
+        font-size: 1.2rem;
+    }
+
+    .iconData p:last-of-type{
+        font-size: 1rem;
+        font-weight: 600;
+    }
+
+    .temp{
+        font-size: 5rem;
+    }
+
+    #desc{
+        font-size: 1rem;
+        margin: auto;
+    }
+
+    .sub-form-container{
+        width: 100%;
+        max-width: 600px;
+        margin: 0rem auto;
+        margin-bottom: 1rem;
+        padding: 0 2rem;
+        gap: 0 0.5rem;
+    }
+
+
+    .form-container input{
+        width:calc(100% - 40px);
+        height: 33px;
+        padding: 0 10px;
+    }
+
+    .form-container button{
+        all: unset;
+        width: 35px;
+        height: 33px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--colorDark2);
+        cursor: pointer;
+        border-radius: 45%;
+    }
+}
+
+.error-container.active {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
+    max-width: 600px;
+}
+
+.errorImage {
+    width: 10rem;
+    margin-bottom: 1rem;
+    width: 70%;
+}
+
+
+/* smaller screens */
+
+@media screen and (max-width: 421px) {
+    .wrapper {
+        min-height: 100vh;
+        width: 100%;
+        color: var(--colorLight2);
+        background-color: #7a7adb;
+        overflow-x: hidden;
+        background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);
+    }
+
+    h1 {
+        font-size: 2rem;
+        padding-top: 20px;
+        margin-bottom: 2rem;
+        text-shadow: -1px 0 var(--colorDark1), 0 8px var(--colorDark1), 1px 0 var(--colorDark1), 0 -1px var(--colorDark1);
+    }
+
+    .tab-container {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        max-width: 421px;
+        margin: 1rem auto;
+        margin-top: 0rem;
+        flex-wrap: wrap;
+    }
+
+    .tab {
+        cursor: pointer;
+        font-size: 0.85rem;
+        letter-spacing: 1.5px;
+        padding: 4px 20px;
+    }
+
+    .weather-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .weatherIcon{
+        width: 5rem;
+        align-self: start;
+        margin-top: 0rem;
+    }
+
+
+    .two-cards,.third-card{
+        justify-content: space-around;
+        width: 100%;
+        margin: 0rem;
+    }
+    .two-cards{
+        gap: 2rem;
     }
 
     .iconData p:first-of-type {
@@ -372,15 +556,31 @@ third-card {
 
     .iconData p:last-of-type {
         font-size: 0.875rem;
+        font-weight: 600;
+    }
+
+    .temp {
+        font-size: 4rem;
+    }
+
+    #desc {
+        font-size: 0.875rem;
+        margin: auto;
+    }
+    .sub-form-container {
+        max-width: 100%;
+        padding: 0 1rem; /* Adjusted padding for smaller screens */
     }
 
     .form-container input {
-        height: 35px;
-        border-radius: 8px;
+        width: calc(100% - 20px); /* Adjusted input width for smaller screens */
     }
 
     .form-container button {
-        width: 40px;
-        height: 35px;
+        width: 35px; /* Adjusted button width for smaller screens */
+        height: 35px; /* Adjusted button height for smaller screens */
+        border-radius: 50%; /* Making the button fully circular */
     }
+
+    /* ... Adjust other styles as needed ... */
 }
